<resources>
    <string name="app_name">BMA</string>
    <string name="bma">BMA</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="facebook">Facebook</string>
    <string name="search">Search...</string>
    <string name="add_note">Add Note</string>
    <string name="clear_history">Clear History</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">Description (optional)</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="note_added">Note saved.</string>
    <string name="error_empty_title">The title may be empty.</string>
    <string name="error_empty_url">The URL may be empty.</string>
    <string name="error_invalid_url">This is not a valid web URL.</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="undo">Undo</string>
    <string name="share_with">Share this URL</string>
    <string name="no_preview">No preview</string>
    <string name="dialog_title_clear_history">Clear history?</string>
    <string name="dialog_message_clear_history">This action can\'t be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history_cleared">History cleared.</string>
    <string name="folder">Folder</string>
    <string name="other">Other</string>
    <string name="app_theme">App Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="folders">Folders</string>
    <string name="folder_info">Add your favorite posts, videos and photos</string>
    <string name="recently_added">Recently added</string>
    <string name="note_added_to_favorites">Note added to favorites.</string>
    <string name="note_removed_from_favorites">Note removed from favorites.</string>
    <string name="appearance">Appearance</string>
    <string name="update">Update</string>
    <string name="error_no_email_apps">There are no email apps installed on your device.</string>
    <string name="error_no_browser_apps">There are no browser apps installed on your device.</string>
    <string name="add_new_note">Add new note</string>
    <string name="add_bookmarks">Click the + button to add some bookmarks</string>
    <string name="no_favorites">No favorites added.</string>
    <string name="no_history">Nothing to be shown.</string>
    <string name="no_search_results">No results found.</string>
    <string name="error_unknown">An unknown error occured.</string>
    <string name="purchase_canceled">The purchase was canceled.</string>
    <string name="billing_unavailable">Billing is unavailable.</string>
    <string name="service_unavailable">The service is unavailable.</string>
    <string name="purchase_failed">The purchase failed.</string>
    <string name="pending_purchase">The purchase request was made and is now awaiting confirmation.</string>
    <string name="version">Version</string>

</resources>